HelloWorld/force-app/main/default/objects/Application_Form__c/Application_Form__c.object-meta.xml
<CustomObject>
    <label>Application Form</label>
    <nameField>
        <displayFormat>AFID{000000}</displayFormat>
        <label>Application Form Name ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>