HelloWorld/force-app/main/default/objects/Application_Form__c/fields/College__c.field-meta.xml
<CustomField>
    <fullName>College__c</fullName>
    <label>College</label>
    <referenceTo>College__c</referenceTo>
    <relationshipLabel>Application Forms</relationshipLabel>
    <relationshipName>Application_Forms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>