HelloWorld/force-app/main/default/objects/Application_Form__c/fields/College_fee__c.field-meta.xml
<CustomField>
    <fullName>College_fee__c</fullName>
    <formula>College__r.College_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>College fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>