HelloWorld/force-app/main/default/objects/Application_Form__c/fields/Guardian_Name__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Name__c</fullName>
    <label>Guardian Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>