HelloWorld/force-app/main/default/objects/Application_Form__c/fields/Hostel_Fee__c.field-meta.xml
<CustomField>
    <fullName>Hostel_Fee__c</fullName>
    <formula>College__r.Hostel_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hostel Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>