HelloWorld/force-app/main/default/objects/Application_Form__c/fields/Looking_for_Hostel_Stay__c.field-meta.xml
<CustomField>
    <fullName>Looking_for_Hostel_Stay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Looking for Hostel Stay</label>
    <type>Checkbox</type>
</CustomField>