HelloWorld/force-app/main/default/objects/Application_Form__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <displayFormat>FormNo-{000000}</displayFormat>
    <label>Form Number</label>
    <type>AutoNumber</type>
</CustomField>