HelloWorld/force-app/main/default/objects/Application_Form__c/fields/Ready_to_join__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_join__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready to join</label>
    <type>Checkbox</type>
</CustomField>